--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,5 @@
 2.) Remove node modules from github
 3.) Look into converting ot es6 modules for importing
 4.) Look into dependency injection for services
+5.) Add validation for task
+6.) Throwing error to controller
