Added error handling to post method; updated create task util method

--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@
 5.) Add validation for task
 6.) Throwing error to controller
 7.) Send proper responsed back (status code, etc)
+8.) Create error page
